# awskey

./: Cargo.toml
src/: domain.rs  lib.rs  main.rs
src/domain/: value_objects.rs
src/domain/entities/: config.rs  profile.rs
src/domain/value_objects/: config_version.rs  profile_name.rs  role_arn.rs  secret_code.rs  serial_number.rs
src/services/: profile_service.rs
