[package]
name = "awskey"
version = "0.1.0"
edition = "2018"

[dependencies]
regex = "1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

# sts = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.14-alpha", package = "aws-sdk-sts" }
# tokio = { version = "1", features = ["full"] }
